# TAlab1

./: .gitignore  CMakeLists.txt  main.cpp  results.xlsx
lib/C++/: statemap.h
smc_gened/: CMakeLists.txt  CheckStr_sm.cpp  CheckStr_sm.dot  CheckStr_sm.h  CheckStr_sm.html
src/: CMakeLists.txt  CheckStr.cpp  CheckStr.h  CheckStr.sm  Dialogue.cpp  Dialogue.h  Hash.cpp  Hash.h
